--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</div>
 			<div class="row">
 			<section id="albums">
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_01.png" />
@@ -97,7 +97,7 @@
 					<div class="count">17 songs</div>
 				</article>
 				</div>	
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_02.png" />
@@ -107,7 +107,7 @@
 					<div class="count">11 songs</div>
 				</article>
 				</div>
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_03.png" />
@@ -117,7 +117,7 @@
 					<div class="count">12 songs</div>
 				</article>
 				</div>
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_04.png" />
@@ -127,7 +127,7 @@
 					<div class="count">11 songs</div>
 				</article>
 				</div>
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_05.png" />
@@ -137,7 +137,7 @@
 					<div class="count">13 songs <span class="explicit">EXPLICIT</span></div>
 				</article>
 				</div>
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_06.png" />
@@ -147,7 +147,7 @@
 					<div class="count">17 songs</div>
 				</article>
 				</div>
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_07.png" />
@@ -157,7 +157,7 @@
 					<div class="count">11 songs</div>
 				</article>
 				</div>
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_08.png" />
@@ -167,7 +167,7 @@
 					<div class="count">12 songs</div>
 				</article>
 				</div>
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_09.png" />
@@ -177,7 +177,7 @@
 					<div class="count">11 songs <span class="explicit">EXPLICIT</span></div>
 				</article>
 				</div>
-				<div class="col-md-2">
+				<div class="col-sm-2 col-md-4 col-lg-6">
 				<article>
 					<figure>
 						<img src="img/album/album_10.png" />
